Read test data from test_date.py

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,6 @@
-reports/allure-report/0c367f87-f38a-4f63-ba48-366541e284f7-result.json
-reports/allure-report/2ea2f0f8-6f3d-484e-9d86-49f11187df8c-result.json
-reports/allure-report/3aa0f3c3-7e25-4281-9010-721139360992-result.json
-reports/allure-report/4a3db92e-999a-42e0-a5c0-69ff6541bd77-result.json
-reports/allure-report/4d246173-b3fd-44fa-8429-26563c6f7255-result.json
-reports/allure-report/5e5cf65d-a243-41c9-a145-15066f283c87-result.json
-reports/allure-report/6cabb445-2755-40fb-a099-f9f681f16da7-result.json
-reports/allure-report/8e29b15f-37aa-4176-a0d1-77f1d416427f-result.json
-reports/allure-report/15af09d4-902e-45d5-997b-dd5c8a8e8133-result.json
-reports/allure-report/52bbd840-812c-4933-931a-9b6798103b59-result.json
-reports/allure-report/54c2a831-c470-49fc-a414-6596f477547c-result.json
-reports/allure-report/6486d975-7564-4658-8eef-f737e3603200-result.json
-reports/allure-report/7790b74c-9c89-41b4-816d-c57d8a717344-result.json
-reports/allure-report/ae2f999b-d993-4b4c-b2da-697e7b2f4b95-result.json
-reports/allure-report/b3ac3605-e2a2-4ed2-9db2-90635553f3da-result.json
-reports/allure-report/c26a2ce5-52fe-45f0-8ce3-466e08afa9de-result.json
-reports/allure-report/ce466443-f775-42b1-bb5a-3e0c9fdca00c-result.json
-reports/allure-report/e2698dba-0625-47df-8166-48fdd5c2707c-result.json
-reports/junit/TESTS-book_data.xml
-reports/junit/TESTS-candlestick.xml
+reports/
+.vscode/settings.json
+*.__pycache__/
+allure-results/
+allure-report/
+.venv/
