Add Rate-limit test case and modify allure report config

--- a/behave.ini
+++ b/behave.ini
@@ -7,3 +7,6 @@ logging_level = INFO
 logging_format = %(levelname)-8s %(name)s: %(message)s
 show_timings = true
 summary = true
+allure = true
+allure_directory = reports/allure
+allure_labels = feature,story,tag,issue
