--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,22 @@ utils/__pycache__/__init__.cpython-313.pyc
 utils/__pycache__/data_validators.cpython-313.pyc
 utils/__pycache__/rest_client.cpython-313.pyc
 utils/__pycache__/websocket_client.cpython-313.pyc
+config/__pycache__/__init__.cpython-313.pyc
+config/__pycache__/__init__.cpython-313.pyc
+config/__pycache__/settings.cpython-313.pyc
+config/__pycache__/__init__.cpython-313.pyc
+utils/__pycache__/__init__.cpython-313.pyc
+utils/__pycache__/data_validators.cpython-313.pyc
+utils/__pycache__/rest_client.cpython-313.pyc
+utils/__pycache__/websocket_client.cpython-313.pyc
+utils/__pycache__/__init__.cpython-313.pyc
+config/__pycache__/__init__.cpython-313.pyc
+config/__pycache__/settings.cpython-313.pyc
+config/__pycache__/test_data.cpython-313.pyc
+utils/__pycache__/__init__.cpython-313.pyc
+utils/__pycache__/data_validators.cpython-313.pyc
+utils/__pycache__/rest_client.cpython-313.pyc
+utils/__pycache__/__init__.cpython-313.pyc
+utils/__pycache__/data_validators.cpython-313.pyc
+utils/__pycache__/rest_client.cpython-313.pyc
+utils/__pycache__/websocket_client.cpython-313.pyc
