--- a/behave.ini
+++ b/behave.ini
@@ -8,5 +8,8 @@ logging_format = %(levelname)-8s %(name)s: %(message)s
 show_timings = true
 summary = true
 allure = true
-allure_directory = reports/allure
+allure_enabled = true
+allure_results_directory = reports/allure-results
+allure_report_directory = reports/allure-reports
+allure_report_name = Allure Report
 allure_labels = feature,story,tag,issue
