Add all public apis

--- a/behave.ini
+++ b/behave.ini
@@ -13,3 +13,6 @@ allure_results_directory = reports/allure-results
 allure_report_directory = reports/allure-reports
 allure_report_name = Allure Report
 allure_labels = feature,story,tag,issue
+capture = true
+capture_file = reports/capture.txt
+capture_file_encoding = utf-8
